# zero2prod

./: Cargo.toml  Dockerfile  readme.md  spec.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
